--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   go_router: ^15.1.1
   easy_localization: ^3.0.7+1
   google_fonts: ^6.2.1
+  shared_preferences: ^2.2.2
   
 dev_dependencies:
   flutter_test:
